--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,49 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+section {
+  @apply max-w-screen-xl mx-auto px-4 py-10 md:py-12 lg:py-16;
+}
+
+h1 {
+  @apply text-5xl md:text-6xl lg:text-7xl font-bold leading-snug;
+}
+
+h2 {
+  @apply text-4xl md:text-5xl lg:text-6xl font-bold leading-snug;
+}
+
+h3 {
+  @apply text-3xl md:text-4xl lg:text-5xl font-bold leading-snug;
+}
+
+h4 {
+  @apply text-2xl md:text-3xl lg:text-4xl font-bold leading-snug;
+}
+
+h5 {
+  @apply text-xl md:text-2xl lg:text-3xl font-bold leading-snug;
+}
+
+h6 {
+  @apply text-lg md:text-xl lg:text-2xl font-bold leading-snug;
+}
+
+.btn {
+  @apply px-6 py-[14px] rounded-full border-2 border-customBlue text-white bg-customBlue font-medium uppercase  hover:bg-customBlue/90 hover:border-customBlue/90;
+}
+
+.btn-outline {
+  @apply text-customBlue bg-transparent hover:text-white hover:bg-customBlue dark:text-white;
+}
+
+.btn-sm {
+  @apply border px-6 py-2;
+}
+
+.btn-lg {
+  @apply px-8 py-5;
+}
