--- a/src/index.css
+++ b/src/index.css
@@ -9,27 +9,31 @@ section {
 }
 
 h1 {
-  @apply text-5xl md:text-6xl lg:text-7xl font-bold leading-snug;
+  @apply text-[32px] md:text-[42px] lg:text-[56px] font-semibold !leading-tight;
 }
 
 h2 {
-  @apply text-4xl md:text-5xl lg:text-6xl font-bold leading-snug;
+  @apply text-[28px] md:text-[36px] lg:text-[48px] font-semibold !leading-tight;
 }
 
 h3 {
-  @apply text-3xl md:text-4xl lg:text-5xl font-bold leading-snug;
+  @apply text-[24px] md:text-[30px] lg:text-[42px] font-semibold !leading-tight;
 }
 
 h4 {
-  @apply text-2xl md:text-3xl lg:text-4xl font-bold leading-snug;
+  @apply text-[22px] md:text-[24px] lg:text-[36px] font-semibold !leading-tight;
 }
 
 h5 {
-  @apply text-xl md:text-2xl lg:text-3xl font-bold leading-snug;
+  @apply text-[20px] md:text-[22px] lg:text-[30px] font-semibold !leading-tight;
 }
 
 h6 {
-  @apply text-lg md:text-xl lg:text-2xl font-bold leading-snug;
+  @apply text-[18px] md:text-[20px] lg:text-[24px] font-semibold !leading-tight;
+}
+
+span {
+  @apply text-customBlue dark:text-blue-500;
 }
 
 .btn {
